--- a/html/contact.html
+++ b/html/contact.html
@@ -7,7 +7,7 @@
     <link
       rel="shortcut icon"
       type="image/jpg"
-      href="/images/Logo-cropped-min.png"
+      href="/images/Logo-cropped.png"
     />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/css/contact.css" />
@@ -17,6 +17,8 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
+    <script defer src="/app.js"></script>
+    <script defer src="/lazy.js"></script>
   </head>
   <body>
     <header>
@@ -28,7 +30,7 @@
         </ul>
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped-min.png" alt=""
+            ><img src="/images/Logo-cropped.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -40,7 +42,7 @@
       <nav class="mobile-nav">
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped-min.png" alt=""
+            ><img src="/images/Logo-cropped.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -65,7 +67,7 @@
         </div>
         <form
           class="contact-form"
-          action="https://formsubmit.co/christensenedits@gmail.com"
+          action="https://formsubmit.co/a521f90a954caeffa7673e160aa4594e"
           method="POST"
         >
           <label for="fullname">
@@ -81,7 +83,7 @@
             <input id="email" type="text" name="Email" required />
           </label>
           <label for="subject">
-            Subject
+            Subject*
             <input id="subject" type="text" name="Subject" required />
           </label>
           <!-- Hidden fields -->
@@ -93,7 +95,7 @@
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
           <label for="message">
-            Message
+            Message*
             <textarea rows="4" id="message" name="Message" required></textarea>
           </label>
           <button>Submit</button>
@@ -119,6 +121,5 @@
         ></a>
       </div>
     </footer>
-    <script src="app.js"></script>
   </body>
 </html>
