--- a/html/services.html
+++ b/html/services.html
@@ -7,7 +7,7 @@
     <link
       rel="shortcut icon"
       type="image/jpg"
-      href="/images/Logo-cropped-min.png"
+      href="/images/Logo-cropped.png"
     />
     <link rel="stylesheet" href="/styles.css" />
     <link rel="stylesheet" href="/css/services.css" />
@@ -17,6 +17,8 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
+    <script defer src="/app.js"></script>
+    <script defer src="/lazy.js"></script>
   </head>
   <body>
     <header>
@@ -28,7 +30,7 @@
         </ul>
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped-min.png" alt=""
+            ><img src="/images/Logo-cropped.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -40,7 +42,7 @@
       <nav class="mobile-nav">
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped-min.png" alt=""
+            ><img src="/images/Logo-cropped.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -62,7 +64,12 @@
           <h2>Color Correcting</h2>
           <div class="services-card">
             <div class="service-image">
-              <img src="/images/services-color-correcting-min.jpg" alt="" />
+              <img
+                src="/images/services-color-correcting-min-lazy.jpg"
+                alt="Family walking down a path"
+                data-src="/images/services-color-correcting-min.jpg"
+                class="lazy-image"
+              />
             </div>
             <div class="service-description-box">
               <h3>What's included</h3>
@@ -130,7 +137,12 @@
               </div>
             </div>
             <div class="service-image">
-              <img src="/images/services-fine-tuning-min.jpg" alt="" />
+              <img
+                src="/images/services-fine-tuning-min-lazy.jpg"
+                alt="Bride and groom looking at each other"
+                data-src="/images/services-fine-tuning-min.jpg"
+                class="lazy-image"
+              />
             </div>
           </div>
         </div>
@@ -139,7 +151,12 @@
           <h2>Fine Tuning</h2>
           <div class="services-card">
             <div class="service-image">
-              <img src="/images/services-fine-tuning-min.jpg" alt="" />
+              <img
+                src="/images/services-fine-tuning-min-lazy.jpg"
+                alt="Bride and groom looking at each other"
+                data-src="/images/services-color-correcting-min.jpg"
+                class="lazy-image"
+              />
             </div>
             <div class="service-description-box">
               <h3>What's included</h3>
@@ -178,7 +195,12 @@
           <h2>Color Correcting and Fine Tuning</h2>
           <div class="services-card" id="service3">
             <div class="service-image">
-              <img src="/images/services-fine-and-color-min.jpg" alt="" />
+              <img
+                src="/images/services-fine-and-color-min-lazy.jpg"
+                alt="Bride and groom looking at each other"
+                data-src="/images/services-fine-and-color-min.jpg"
+                class="lazy-image"
+              />
             </div>
             <div class="service-description-box">
               <h3>What's included</h3>
@@ -241,7 +263,7 @@
         </div>
         <form
           class="contact-form"
-          action="https://formsubmit.co/christensenedits@gmail.com"
+          action="https://formsubmit.co/a521f90a954caeffa7673e160aa4594e"
           method="POST"
         >
           <label for="fullname">
@@ -257,7 +279,7 @@
             <input id="email" type="text" name="Email" required />
           </label>
           <label for="subject">
-            Subject
+            Subject*
             <input id="subject" type="text" name="Subject" required />
           </label>
           <!-- Hidden fields -->
@@ -269,7 +291,7 @@
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
           <label for="message">
-            Message
+            Message*
             <textarea rows="4" id="message" name="Message" required></textarea>
           </label>
           <button>Submit</button>
@@ -295,6 +317,5 @@
         ></a>
       </div>
     </footer>
-    <script src="app.js"></script>
   </body>
 </html>
