--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link
       rel="shortcut icon"
       type="image/jpg"
-      href="/images/Logo-cropped-min.png"
+      href="/images/Logo-cropped.png"
     />
     <link rel="stylesheet" href="styles.css" />
     <link
@@ -16,6 +16,8 @@
       integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm"
       crossorigin="anonymous"
     />
+    <script defer src="/app.js"></script>
+    <script defer src="/lazy.js"></script>
   </head>
   <body>
     <header>
@@ -27,7 +29,7 @@
         </ul>
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped-min.png" alt=""
+            ><img src="/images/Logo-cropped.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -39,7 +41,7 @@
       <nav class="mobile-nav">
         <div class="logo">
           <a href="/index.html"
-            ><img src="/images/Logo-cropped-min.png" alt=""
+            ><img src="/images/Logo-cropped.png" alt=""
           /></a>
         </div>
         <ul class="nav-links">
@@ -54,7 +56,12 @@
     </header>
     <!-- JUMBOTRON -->
     <section class="jumbotron-section">
-      <img src="/images/jumbotron-min.jpg" alt="" />
+      <img
+        src="/images/jumbotron-min-lazy.jpg"
+        alt="Man and woman walking in a field"
+        data-src="/images/jumbotron-min.jpg"
+        class="lazy-image"
+      />
     </section>
     <!-- WELCOME SECTION -->
     <section class="welcome-section">
@@ -70,8 +77,10 @@
           <h3>I am so excited to have you here!</h3>
           <div class="avatar-picture-mobile">
             <img
-              src="/images/Claire-profile-cropped-min.jpg"
+              src="/images/Claire-profile-cropped-min-lazy.jpg"
               alt="Claire posing for a portrait picture"
+              data-src="/images/Claire-profile-cropped-min.jpg"
+              class="lazy-image"
             />
           </div>
           <p>
@@ -182,7 +191,7 @@
         </div>
         <form
           class="contact-form"
-          action="https://formsubmit.co/christensenedits@gmail.com"
+          action="https://formsubmit.co/a521f90a954caeffa7673e160aa4594e"
           method="POST"
         >
           <label for="fullname">
@@ -198,7 +207,7 @@
             <input id="email" type="text" name="Email" required />
           </label>
           <label for="subject">
-            Subject
+            Subject*
             <input id="subject" type="text" name="Subject" required />
           </label>
           <!-- Hidden fields -->
@@ -210,7 +219,7 @@
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
           <label for="message">
-            Message
+            Message*
             <textarea rows="4" id="message" name="Message" required></textarea>
           </label>
           <button>Submit</button>
@@ -236,7 +245,5 @@
         ></a>
       </div>
     </footer>
-    <script src="/app.js"></script>
-    <script src="/lazy.js"></script>
   </body>
 </html>
