Added Thankyou.html and updated form on each page
Next steps:
- Review everything with Claire
- Fix iPad image stretching

--- a/html/about.html
+++ b/html/about.html
@@ -181,7 +181,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://christensenedits.com/"
+            value="https://christensenedits.com/html/thankyou.html"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
