--- a/html/services.html
+++ b/html/services.html
@@ -154,7 +154,7 @@
               <img
                 src="/images/services-fine-tuning-min-lazy.jpg"
                 alt="Bride and groom looking at each other"
-                data-src="/images/services-color-correcting-min.jpg"
+                data-src="/images/services-fine-tuning-min.jpg"
                 class="lazy-image"
               />
             </div>
@@ -286,7 +286,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://christensenedits.com/"
+            value="https://christensenedits.com/html/thankyou.html"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
