--- a/html/thankyou.html
+++ b/html/thankyou.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Contact Me</title>
+    <title>Thank you!</title>
     <link
       rel="shortcut icon"
       type="image/jpg"
       href="/images/Logo-cropped.png"
     />
     <link rel="stylesheet" href="/styles.css" />
-    <link rel="stylesheet" href="/css/contact.css" />
+    <link rel="stylesheet" href="/css/thankyou.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
@@ -55,51 +55,20 @@
         </ul>
       </nav>
     </header>
-    <!-- CONTACT SECTION -->
-    <section class="contact-section">
-      <h2>Interested in learning more?</h2>
-      <div class="container">
-        <div class="image-block">
-          <img
-            src="/images/Claire-profile-cropped-min.jpg"
-            alt="Claire posing for a portrait picture"
-          />
-        </div>
-        <form
-          class="contact-form"
-          action="https://formsubmit.co/a521f90a954caeffa7673e160aa4594e"
-          method="POST"
-        >
-          <label for="fullname">
-            Full Name*
-            <input id="fullname" type="text" name="Full Name" required />
-          </label>
-          <label for="website">
-            Your Website
-            <input id="website" type="text" name="Website" />
-          </label>
-          <label for="email">
-            Email Address*
-            <input id="email" type="text" name="Email" required />
-          </label>
-          <label for="subject">
-            Subject*
-            <input id="subject" type="text" name="Subject" required />
-          </label>
-          <!-- Hidden fields -->
-          <input
-            type="hidden"
-            name="_next"
-            value="https://christensenedits.com/html/thankyou.html"
-          />
-          <input type="hidden" name="_subject" value="New inquiry!" />
-          <input type="hidden" name="_captcha" value="false" />
-          <label for="message">
-            Message*
-            <textarea rows="4" id="message" name="Message" required></textarea>
-          </label>
-          <button>Submit</button>
-        </form>
+    <!-- THANK YOU SECTION -->
+    <section class="thankyou-section">
+      <div class="image-block">
+        <img
+          src="/images/Claire-profile-cropped-min.jpg"
+          alt="Claire posing for a portrait picture"
+        />
+      </div>
+      <div class="thankyou-box">
+        <h1 class="section-title">Thank you!</h1>
+        <p>
+          I'm really excited to get to know you! I'll reach out within the next
+          24 hours.
+        </p>
       </div>
     </section>
     <!-- FOOTER SECTION -->
