--- a/index.html
+++ b/index.html
@@ -68,8 +68,10 @@
       <div class="welcome-wrapper">
         <div class="avatar-picture">
           <img
-            src="/images/Claire-profile-cropped-min.jpg"
+            src="/images/Claire-profile-cropped-min-lazy.jpg"
             alt="Claire posing for a portrait picture"
+            data-src="/images/Claire-profile-cropped-min.jpg"
+            class="lazy-image"
           />
         </div>
         <div class="welcome-text-box">
@@ -214,7 +216,7 @@
           <input
             type="hidden"
             name="_next"
-            value="https://christensenedits.com/"
+            value="https://christensenedits.com/html/thankyou.html"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
           <input type="hidden" name="_captcha" value="false" />
