fixed about page, fixed thankyou.html

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
     <!-- JUMBOTRON -->
     <section class="jumbotron-section">
       <img
-        src="/images/jumbotron-min-lazy.jpg"
+        src="/images/bg-new-again-lazy.jpg"
         alt="Man and woman walking in a field"
-        data-src="/images/jumbotron-min.jpg"
+        data-src="/images/bg-new-again.jpg"
         class="lazy-image"
       />
     </section>
@@ -68,10 +68,8 @@
       <div class="welcome-wrapper">
         <div class="avatar-picture">
           <img
-            src="/images/Claire-profile-cropped-min-lazy.jpg"
+            src="/images/Claire-profile-cropped-min.jpg"
             alt="Claire posing for a portrait picture"
-            data-src="/images/Claire-profile-cropped-min.jpg"
-            class="lazy-image"
           />
         </div>
         <div class="welcome-text-box">
@@ -79,10 +77,8 @@
           <h3>I am so excited to have you here!</h3>
           <div class="avatar-picture-mobile">
             <img
-              src="/images/Claire-profile-cropped-min-lazy.jpg"
+              src="/images/Claire-profile-cropped-min.jpg"
               alt="Claire posing for a portrait picture"
-              data-src="/images/Claire-profile-cropped-min.jpg"
-              class="lazy-image"
             />
           </div>
           <p>
@@ -236,7 +232,6 @@
         <li><a href="/html/process.html">Process</a></li>
         <li><a href="/html/contact.html">Contact</a></li>
         <li><a href="/html/faq.html">FAQ's</a></li>
-        <li><a href="/html/gallery.html">Gallery</a></li>
       </ul>
       <div class="social-links">
         <h3>Follow me</h3>
