Updated service package names and prices

--- a/html/services.html
+++ b/html/services.html
@@ -61,7 +61,7 @@
       <div class="services-container">
         <!-- FIRST SERVICE -->
         <div class="service">
-          <h2>Color Correcting</h2>
+          <h2>Basic Package</h2>
           <div class="services-card">
             <div class="service-image">
               <img
@@ -105,14 +105,26 @@
 
         <!-- SECOND SERVICE -->
         <div class="service desktop">
-          <h2>Fine Tuning</h2>
+          <h2>Premium Package</h2>
           <div class="services-card" id="service2">
             <div class="service-description-box">
               <h3>What's included</h3>
               <div class="service-description">
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
+                  <p>Everything in Basic Package</p>
+                </div>
+                <div class="service-description-line">
+                  <i class="fas fa-check"></i>
                   <p>Removing blemishes</p>
+                </div>
+                <div class="service-description-line">
+                  <i class="fas fa-check"></i>
+                  <p>Smoothing skin</p>
+                </div>
+                <div class="service-description-line">
+                  <i class="fas fa-check"></i>
+                  <p>Removing far away objects/people</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
@@ -120,19 +132,11 @@
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Individualized fine tuning adjustments</p>
-                </div>
-                <div class="service-description-line">
-                  <i class="fas fa-check"></i>
-                  <p>Removing necessary backgrounds</p>
-                </div>
-                <div class="service-description-line">
-                  <i class="fas fa-check"></i>
                   <p>3-5 business days process from start to finish</p>
                 </div>
                 <div class="investment">
                   <h4>Investment</h4>
-                  <p>$0.30/image</p>
+                  <p>$0.60/image</p>
                 </div>
               </div>
             </div>
@@ -148,7 +152,7 @@
         </div>
         <!-- SECOND SERVICE -- MOBILE -->
         <div class="service" id="service2-mobile">
-          <h2>Fine Tuning</h2>
+          <h2>Premium Package</h2>
           <div class="services-card">
             <div class="service-image">
               <img
@@ -163,7 +167,19 @@
               <div class="service-description">
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
+                  <p>Everything in Basic Package</p>
+                </div>
+                <div class="service-description-line">
+                  <i class="fas fa-check"></i>
                   <p>Removing blemishes</p>
+                </div>
+                <div class="service-description-line">
+                  <i class="fas fa-check"></i>
+                  <p>Smoothing skin</p>
+                </div>
+                <div class="service-description-line">
+                  <i class="fas fa-check"></i>
+                  <p>Removing far away objects/people</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
@@ -171,19 +187,11 @@
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Individualized fine tuning adjustments</p>
-                </div>
-                <div class="service-description-line">
-                  <i class="fas fa-check"></i>
-                  <p>Removing necessary backgrounds</p>
-                </div>
-                <div class="service-description-line">
-                  <i class="fas fa-check"></i>
                   <p>3-5 business days process from start to finish</p>
                 </div>
                 <div class="investment">
                   <h4>Investment</h4>
-                  <p>$0.30/image</p>
+                  <p>$0.60/image</p>
                 </div>
               </div>
             </div>
@@ -192,7 +200,7 @@
 
         <!-- THIRD SERVICE -->
         <div class="service">
-          <h2>Color Correcting and Fine Tuning</h2>
+          <h2>Deluxe Package</h2>
           <div class="services-card" id="service3">
             <div class="service-image">
               <img
@@ -207,43 +215,39 @@
               <div class="service-description">
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Softening skin</p>
+                  <p>Everything in Basic and Premium Packages</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Brightening eyes</p>
+                  <p>Radial/linear gradients</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Individualized fine tuning adjustments</p>
+                  <p>Clone and heal tool</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Removing necessary backgrounds</p>
+                  <p>Select subject tool/select sky</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Preset application</p>
+                  <p>Brushes other than smoothing skin on faces</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>White balance</p>
+                  <p>Luminance range</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Individualized color adjustments</p>
+                  <p>Red-eye</p>
                 </div>
                 <div class="service-description-line">
                   <i class="fas fa-check"></i>
-                  <p>Straightening and cropping</p>
-                </div>
-                <div class="service-description-line">
-                  <i class="fas fa-check"></i>
-                  <p>3-5 business days process from start to finish</p>
+                  <p>5-7 business days process from start to finish</p>
                 </div>
                 <div class="investment">
                   <h4>Investment</h4>
-                  <p>$0.60/image</p>
+                  <p>$0.80/image</p>
                 </div>
               </div>
             </div>
