Added captcha value to form on each html page

--- a/html/process.html
+++ b/html/process.html
@@ -124,7 +124,7 @@
             value="https://christensenedits.com/html/thankyou.html"
           />
           <input type="hidden" name="_subject" value="New inquiry!" />
-          <input type="hidden" name="_captcha" value="false" />
+          <!-- <input type="hidden" name="_captcha" value="false" /> -->
           <label for="message">
             Message*
             <textarea rows="4" id="message" name="Message" required></textarea>
